within form.html: replaced section element within section 2 with a div element due to this being semantically incorrect. have also replaced section element wrapping the image element on same page with a div element for the same reasons. have changed id of input element in checkboxes so that each checkbox is unique and the id isn't duplicating. have also changed the name in the same element to match the value and not the id. The required attribute has been removed from the drop down element as no longer required and p element within the first div element has been changed to a h3 element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,7 +353,7 @@ caption {
     font-size: 120%;
 }
 
-#availability {
+#options-list {
     margin-bottom: 1em;
     position: relative;
     text-align: left;
